--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,25 +1,42 @@
 {% extends 'base.html' %} 
 {% block content %}
-
-<div class="col-md-6 offset-md-3">
     
     {% if user.is_authenticated %}
 
     <h1>Records</h1>
 
-    {% if records %} 
-        {% for record in records %}
-            {{record.first_name}}
-            {{record.last_name}}
-            {{record.email}}
-            {{record.phone}}
-            {{record.address}}
-            <br/><br/>
-        {% endfor %}
-    {% endif %}
+    <table class="table table-striped table-hover table-bordered">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Address</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% if records %} 
+            <tr>
+                {% for record in records %}
+                <td><a href="{% url 'record' record.id %}">{{record.id}}</td>
+                <td>{{record.first_name}}</td>
+                <td>{{record.last_name}}</td>
+                <td>{{record.email}}</td>
+                <td>{{record.phone}}</td>
+                <td>{{record.address}}</td>
+                <br/><br/>
+            </tr>
+                {% endfor %}
+            {% endif %}
+        </tbody>
+      </table>
+
 
     {% else %}
 
+    <div class="col-md-6 offset-md-3">
     <h1>Login</h1>
 
     <form method="POST" action="{% url 'home' %}">
